0.7.14: resolve confclicts